+ per default osx & terminal are not configured

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,10 @@
+configure_terminal: false
+configure_osx: false
+
 homebrew_installed_packages:
+  - bash-completion
   - git
   - node
-  - bash-completion
 
 homebrew_cask_apps:
   - docker
