--- a/config.yml
+++ b/config.yml
@@ -14,10 +14,7 @@ homebrew_cask_apps:
   - intellij-idea
   - onedrive
   - rectangle
-
-
-mas_installed_apps:
-  - { id: 443987910, name: "1Password" }
+  - sequel-ace
 
 pip_packages:
   - name: pipenv
