+ homebrew package "zsh-history-substring-search" added

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,7 @@ homebrew_installed_packages:
   - bash-completion
   - git
   - node
+  - zsh-history-substring-search
 
 homebrew_cask_apps:
   - docker
